tests/rosetta/out/C/constrained-random-points-on-a-circle-2.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:37Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:37Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <time.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_list_int concat_list_list_int(list_list_int a, list_list_int b) {
  list_list_int r = list_list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static long long _now() {
  struct timespec ts;
  clock_gettime(CLOCK_REALTIME, &ts);
  return (long long)ts.tv_sec * 1000000000LL + ts.tv_nsec;
}
static int nPts = 100;
static int rMin = 10;
static int rMax = 15;
static int r = 0;
static int u = 0;
static int n = 0;
static int i2 = 0;

int _mochi_main() {
  int span = rMax + 1 + rMax;
  list_list_int poss = {0, NULL};
  int min2 = rMin * rMin;
  int max2 = rMax * rMax;
  int y = (-rMax);
  while (y <= rMax) {
    int x = (-rMax);
    while (x <= rMax) {
      int r2 = x * x + y * y;
      if (r2 >= min2 && r2 <= max2) {
        list_int tmp1 = list_int_create(2);
        tmp1.data[0] = x;
        tmp1.data[1] = y;
        list_list_int tmp2 = list_list_int_create(1);
        tmp2.data[0] = tmp1;
        list_list_int tmp3 = concat_list_list_int(poss, tmp2);
        poss = tmp3;
      }
      x = x + 1;
    }
    y = y + 1;
  }
  char *tmp4 = _str(poss.len);
  char *tmp5 = concat_string(tmp4, " possible points");
  printf("%s\n", tmp5);
  while (r < span) {
    list_string row = list_string_create(0);
    int c = 0;
    while (c < span * 2) {
      list_string tmp6 = list_string_create(1);
      tmp6.data[0] = " ";
      list_string tmp7 = concat_list_string(row, tmp6);
      row = tmp7;
      c = c + 1;
    }
    rows = 0;
    r = r + 1;
  }
  map_string_int tmp8 = map_string_int_create(0);
  int seen = tmp8;
  while (n < nPts) {
    int i = _now() % poss.len;
    int x = poss.data[i].data[0];
    int yy = poss.data[i].data[1];
    int row = yy + rMax;
    int col = (x + rMax) * 2;
    rows.data[row].data[col] = "*";
    char *tmp9 = _str(row);
    char *tmp10 = concat_string(tmp9, ",");
    char *tmp11 = _str(col);
    char *tmp12 = concat_string(tmp10, tmp11);
    char *key = tmp12;
    if ((!seen.data[key])) {
      seen.data[key] = 1;
      u = u + 1;
    }
    n = n + 1;
  }
  while (i2 < span) {
    char *line = "";
    int j = 0;
    while (j < span * 2) {
      line = line + rows.data[i2].data[j];
      j = j + 1;
    }
    printf("%s\n", line);
    i2 = i2 + 1;
  }
  char *tmp13 = _str(u);
  char *tmp14 = concat_string(tmp13, " unique points");
  printf("%s\n", tmp14);
  return 0;
}
int main() { return _mochi_main(); }
